--- a/AdversarialAttacksOnFaceRecognition.ipynb
+++ b/AdversarialAttacksOnFaceRecognition.ipynb
@@ -53,7 +53,7 @@
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "from keras.models import Model, Sequential\n",
     "from keras.layers import Dropout, Flatten, Dense\n",
-    "from keras.optimizers import RMSprop\n",
+    "from tensorflow.keras.optimizers import RMSprop\n",
     "from keras import backend as K\n",
     "from keras.preprocessing import image\n",
     "\n",
@@ -290,7 +290,7 @@
    },
    "source": [
     "model.compile(loss = 'categorical_crossentropy',\n",
-    "              optimizer = RMSprop(lr = 1e-5, decay = 1e-7),\n",
+    "              optimizer = RMSprop(learning_rate = 1e-5, decay = 1e-7),\n",
     "              metrics = ['accuracy'])"
    ],
    "execution_count": null,
